Modifiy Game-Website commit

--- a/index.html
+++ b/index.html
@@ -1,54 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Your Game Website</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f0f0;
-    }
+<link rel="stylesheet" href="style.css">
+<title>Match-Zone</title>
 
-    header {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 10px;
-    }
-
-    nav {
-      background-color: #444;
-      color: white;
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-
-    section {
-      padding: 20px;
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
 </head>
 
 <body>
@@ -81,59 +38,59 @@
       <img src="screenshot2.jpg" alt="Screenshot 2">
     </div>
   </section>
-  
+
   <section class="contact-form">
     <h2>Contact Us</h2>
     <p>If you have any questions or feedback, feel free to contact us using the form below:</p>
     <form action="#" method="post">
       <label for="name">Your Name:</label>
       <input type="text" id="name" name="name" required>
-  
+
       <label for="email">Your Email:</label>
       <input type="email" id="email" name="email" required>
-  
+
       <label for="message">Your Message:</label>
       <textarea id="message" name="message" rows="4" required></textarea>
-  
+
       <button type="submit">Submit</button>
     </form>
   </section>
-    <section class="download-section">
-      <h2>Download Your Game Now!</h2>
-      <a href="download-link" class="download-btn">Download for Free</a>
-    </section>
-    
-    <section class="about-section">
-      <h2>About Your Game</h2>
-      <p>
-        Provide a compelling description of your game, including its storyline, characters,
-        and unique features. Use this section to engage visitors and create excitement about
-        your game.
-      </p>
-      <p>
-        You can also include information about the development team, game updates, and any
-        other interesting details that would captivate your audience.
-      </p>
-    </section>
-      <section class="gallery-section">
-        <h2>Gallery</h2>
-        <img src="gallery1.jpg" alt="Gallery Image 1" class="gallery-img">
-        <img src="gallery2.jpg" alt="Gallery Image 2" class="gallery-img">
-        <img src="gallery3.jpg" alt="Gallery Image 3" class="gallery-img">
-      </section>
-      
-      <section class="gameplay-section">
-        <h2>Gameplay</h2>
-        <p>
-          Describe the gameplay mechanics, controls, and any other relevant details that will
-          help players understand what to expect from your game. Use this section to highlight
-          the key features that make your game enjoyable and engaging.
-        </p>
-        <p>
-          You can also include information about the game's objectives, challenges, and any
-          special modes or levels that players can experience.
-        </p>
-      </section>
+  <section class="download-section">
+    <h2>Download Your Game Now!</h2>
+    <a href="download-link" class="download-btn">Download for Free</a>
+  </section>
+
+  <section class="about-section">
+    <h2>About Your Game</h2>
+    <p>
+      Provide a compelling description of your game, including its storyline, characters,
+      and unique features. Use this section to engage visitors and create excitement about
+      your game.
+    </p>
+    <p>
+      You can also include information about the development team, game updates, and any
+      other interesting details that would captivate your audience.
+    </p>
+  </section>
+  <section class="gallery-section">
+    <h2>Gallery</h2>
+    <img src="gallery1.jpg" alt="Gallery Image 1" class="gallery-img">
+    <img src="gallery2.jpg" alt="Gallery Image 2" class="gallery-img">
+    <img src="gallery3.jpg" alt="Gallery Image 3" class="gallery-img">
+  </section>
+
+  <section class="gameplay-section">
+    <h2>Gameplay</h2>
+    <p>
+      Describe the gameplay mechanics, controls, and any other relevant details that will
+      help players understand what to expect from your game. Use this section to highlight
+      the key features that make your game enjoyable and engaging.
+    </p>
+    <p>
+      You can also include information about the game's objectives, challenges, and any
+      special modes or levels that players can experience.
+    </p>
+  </section>
 
   <footer>
     &copy; 2023 Your Game. All rights reserved.
